# goit-hm-web-2

./: Dockerfile  pyproject.toml  requirements.txt  setup.py
teamwork-Tech_Titans/teamwork-Tech_Titans/: AddressBookBot.py  Menu_project.py  NoteBookBot.py
